public class PrimeraPregunta {
    public String PrimeraPregunta;
    public String pregunta = "Vista pública clases";

    public PrimeraPregunta(String PrimeraPregunta) {
        this.PrimeraPregunta = PrimeraPregunta;
    }
}
