public class SegundaPregunta {
    public String SegundaPregunta;
    public String pregunta = "Vista pública de objetos";

    public SegundaPregunta(String SegundaPregunta) {
        this.SegundaPregunta = SegundaPregunta;
    }
}
